--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ body {
   background-color: #011F3F;
 }
 
+
+
+
+
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
@@ -50,4 +54,10 @@ body {
 .pressed {
   box-shadow: 0 0 20px white;
   background-color: grey;
+}
+
+.copyright {
+   font-family: 'Press Start 2P', cursive;
+   color: white;
+
 }
