--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
 
 .start {
   text-align: center;
+  border-radius: 10%;
   height: 50px;
   width: 120px;
   margin: 20px 0 30px 0;
@@ -104,25 +105,63 @@ body {
   }
   .start {
     text-align: center;
-    height: 50px;
-    width: 80px;
+    border-radius: 10%;
+    height: 60px;
+    width: 120px;
     margin: 20px 0 30px 0;
+  }
+  #level-title {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 2rem;
+    margin:  2%;
+    color: #FEF2BF;
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 745px) {
   .btns {
     margin: 10px;
     display: inline-block;
-    height: 100px;
-    width: 100px;
+    height: 105px;
+    width: 105px;
     border: 8px solid black;
     border-radius: 20%;
   }
   .start {
     text-align: center;
+    border-radius: 10%;
     height: 50px;
     width: 80px;
     margin: 20px 0 30px 0;
   }
+  #level-title {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 2rem;
+    margin:  2%;
+    color: #FEF2BF;
+  }
+
+  @media (min-width: 500px) and (max-width: 600px)  {
+    .btns {
+      margin: 10px;
+      display: inline-block;
+      height: 80px;
+      width: 80px;
+      border: 8px solid black;
+      border-radius: 20%;
+    }
+    .start {
+      text-align: center;
+      border-radius: 10%;
+      height: 50px;
+      width: 80px;
+      margin: 20px 0 30px 0;
+    }
+    #level-title {
+      font-family: 'Press Start 2P', cursive;
+      font-size: 2rem;
+      margin:  2%;
+      color: #FEF2BF;
+    }
+
 }
