Solve Bootstrap and Media query conflict

--- a/styles.css
+++ b/styles.css
@@ -165,3 +165,28 @@ body {
     }
 
 }
+
+@media (min-width: 600px) and (max-width: 744px)  {
+  .btns {
+    margin: 2px;
+    display: inline-block;
+    height: 140px;
+    width: 140px;
+    border: 8px solid black;
+    border-radius: 20%;
+  }
+  .start {
+    text-align: center;
+    border-radius: 10%;
+    height: 50px;
+    width: 80px;
+    margin: 20px 0 200px 0;
+  }
+  #level-title {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 2rem;
+    margin:  2%;
+    color: #FEF2BF;
+  }
+
+}
