--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
 }
 
 .start {
+  background-color: #d92027;
   text-align: center;
   border-radius: 10%;
   height: 50px;
@@ -108,7 +109,7 @@ body {
     border-radius: 10%;
     height: 60px;
     width: 120px;
-    margin: 20px 0 30px 0;
+    margin: 20px 0 150px 0;
   }
   #level-title {
     font-family: 'Press Start 2P', cursive;
@@ -118,69 +119,21 @@ body {
   }
 }
 
-@media (max-width: 745px) {
-  .btns {
-    margin: 5px;
-    display: inline-block;
-    height: 140px;
-    width: 140px;
-    border: 8px solid black;
-    border-radius: 20%;
-  }
-  .start {
-    text-align: center;
-    border-radius: 10%;
-    height: 50px;
-    width: 80px;
-    margin: 20px 0 230px 0;
-  }
-  #level-title {
-    font-family: 'Press Start 2P', cursive;
-    font-size: 2rem;
-    margin:  2%;
-    color: #FEF2BF;
-  }
-
-  @media (min-width: 500px) and (max-width: 600px)  {
-    .btns {
-      margin: 1px;
-      display: inline-block;
-      height: 120px;
-      width: 120px;
-      border: 8px solid black;
-      border-radius: 20%;
-    }
-    .start {
-      text-align: center;
-      border-radius: 10%;
-      height: 50px;
-      width: 80px;
-      margin: 20px 0 200px 0;
-    }
-    #level-title {
-      font-family: 'Press Start 2P', cursive;
-      font-size: 2rem;
-      margin:  2%;
-      color: #FEF2BF;
-    }
-
-}
-
-@media (min-width: 600px) and (max-width: 744px)  {
+@media (max-width: 743px) {
   .btns {
     margin: 2px;
     display: inline-block;
-    height: 140px;
-    width: 140px;
-    border: 8px solid black;
+    height: 120px;
+    width: 120px;
+    border: 6px solid black;
     border-radius: 20%;
   }
   .start {
     text-align: center;
     border-radius: 10%;
     height: 50px;
-    width: 80px;
-    margin: 20px 0 200px 0;
+    width: 100px;
+    margin: 20px 0 170px 0;
   }
   #level-title {
     font-family: 'Press Start 2P', cursive;
@@ -188,5 +141,52 @@ body {
     margin:  2%;
     color: #FEF2BF;
   }
+}
 
+@media (max-width: 583px) {
+  .btns {
+    margin: 5px;
+    display: inline-block;
+    height: 110px;
+    width: 110px;
+    border: 5px solid black;
+    border-radius: 20%;
+  }
+  .start {
+    text-align: center;
+    border-radius: 10%;
+    height: 50px;
+    width: 100px;
+    margin: 20px 0 160px 0;
+  }
+  #level-title {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 2rem;
+    margin:  2%;
+    color: #FEF2BF;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 543px) {
+  .btns {
+    margin: 2px;
+    display: inline-block;
+    height: 90px;
+    width: 90px;
+    border: 5px solid black;
+    border-radius: 20%;
+  }
+  .start {
+    text-align: center;
+    border-radius: 10%;
+    height: 50px;
+    width: 100px;
+    margin: 20px 0 160px 0;
+  }
+  #level-title {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 2rem;
+    margin:  2%;
+    color: #FEF2BF;
+  }
 }
